Bug 1240208 - use inputmode in XUL to get better hinting for IME and on-screen keyboards, r=masayuki r=smaug, a=sylvestre